--- a/src/RoslynMcp.csproj
+++ b/src/RoslynMcp.csproj
@@ -8,7 +8,7 @@
 
     <!-- Global Tool Configuration -->
     <PackAsTool>true</PackAsTool>
-    <ToolCommandName>dotnetroslyn-mcp</ToolCommandName>
+    <ToolCommandName>dotnet-roslyn-mcp</ToolCommandName>
     <PackageId>RoslynMcp</PackageId>
     <Version>1.0.0</Version>
     <Authors>Brendan Kowitz</Authors>
